feat: add logic for chat to remove and add participants and rename classes