@@ -1,22 +1,22 @@
 package com.chat_app.testdata;
 
 import com.chat_app.domain.entity.Chat;
-import com.chat_app.domain.entity.ChatParticipant;
+import com.chat_app.domain.entity.Participant;
 import com.chat_app.domain.type.ChatType;
 import com.chat_app.domain.valueobjects.ChatId;
 
 import java.time.OffsetDateTime;
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 import static com.chat_app.testdata.ChatIdBuilder.aChatId;
-import static com.chat_app.testdata.ChatParticipantBuilder.aChatParticipant;
+import static com.chat_app.testdata.ParticipantBuilder.aParticipant;
 
 public class ChatBuilder {
     private ChatId chatId = aChatId().build();
     private ChatType chatType = ChatType.PRIVATE;
     private String name = "Random Group name";
-    private List<ChatParticipant> participants = Arrays.asList(aChatParticipant().build());
+    private List<Participant> participants = new ArrayList<>(List.of(aParticipant().build()));
     private OffsetDateTime createdAt = OffsetDateTime.now();
     private OffsetDateTime updatedAt = OffsetDateTime.now();
 
@@ -39,7 +39,7 @@ public class ChatBuilder {
         return this;
     }
 
-    public ChatBuilder withParticipants(List<ChatParticipant> participants) {
+    public ChatBuilder withParticipants(List<Participant> participants) {
         this.participants = participants;
         return this;
     }
